# file_system

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/helpers/: mod.rs
src/models/: content.rs
src/services/: mod.rs  run.rs
src/services/read/: mod.rs  read.rs  reader.rs
src/services/watcher/: watcher.rs
src/services/write/: copy.rs
